# voting-dapp

./: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
anchor/: Anchor.toml  Cargo.toml  tsconfig.json
anchor/programs/votee/: Cargo.toml
anchor/programs/votee/src/: Cargo.toml  lib.rs
anchor/programs/votee/src/errors/: mod.rs
anchor/programs/votee/src/instructions/: create_polls.rs  initialize.rs  mod.rs  register_candidate.rs  voter.rs
anchor/programs/votee/src/states/: candidate.rs  counter.rs  mod.rs  poll.rs  registerations.rs  voter.rs
anchor/src/: index.ts  votee-exports.ts
src/app/components/: Header.tsx
src/app/utils/: interfaces.ts
